<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_margin="5dp"
    android:layout_marginBottom="25dp"
    tools:context=".ui.fragment.CreateTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/descricao">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_descricao_criar_tarefas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_subTarefa_criar_tarefas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="2"
            tools:listitem="@layout/lista_tarefas_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adicionar_tarefas"
            app:startIconDrawable="@drawable/ic_icon_add">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_subtarefa_criar_tarefas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear_categoria_criar_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textColor="#1C1C1C"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_categoria_criar_tarefa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sem_categoria"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/linear_adicionar_meu_dia_criar_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adicionar_ao_meu_dia"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="3dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_lembrar_criar_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notification"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lembra_me"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="3dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_data_conclusao_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar_clean"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_de_conclusao"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="3dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_pomodoro_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tomato"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pomodoro"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="3dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_repetir_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_repeat"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repetir"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="3dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_anexo_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clip"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anexo"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="3dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_anotacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/adicionar_anotacao">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_anotacao_criar_tarefas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>